# themehub

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  flake.nix
.agents/skills/testing-themehub/: SKILL.md
.github/workflows/: cli.yml  web.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/: api.md  moderation.md  security.md  self-hosting.md  theme-spec.md
examples/themes/furry-grub-dark/: README.md  theme.toml  theme.txt
examples/themes/gtk-night-paws/: README.md  index.theme  theme.toml
examples/themes/paw-alacritty/: README.md  paw.toml  theme.toml
examples/themes/paw-conky/: README.md  conky.conf  theme.toml
examples/themes/paw-cursor-mono/: README.md  index.theme  theme.toml
examples/themes/paw-discord/: README.md  paw.theme.css  theme.toml
examples/themes/paw-eww/: README.md  eww.scss  eww.yuck  theme.toml
examples/themes/paw-fastfetch/: README.md  config.jsonc  paw.txt  theme.toml
examples/themes/paw-ghostty/: README.md  paw  theme.toml
examples/themes/paw-helix/: README.md  paw.toml  theme.toml
examples/themes/paw-hyprland/: README.md  hyprland.conf  theme.toml
examples/themes/paw-i3/: README.md  config  theme.toml
examples/themes/paw-icons/: README.md  index.theme  theme.toml
examples/themes/paw-keycap/: README.md  theme.toml
examples/themes/paw-kitty/: README.md  paw-kitty.conf  theme.toml
examples/themes/paw-mako/: README.md  config  theme.toml
examples/themes/paw-mini-screen/: README.md  (+2 more)
nix/: module.nix
web/: Dockerfile  drizzle.config.ts  next.config.ts  package-lock.json  package.json
(+123 files in other folders)
