[package]
name = "themehub"
version = "0.1.0"
edition = "2021"
description = "Command-line client for themehub instances"
license = "MIT"
repository = "https://github.com/CDotNightHawk/themehub"

[[bin]]
name = "themehub"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
dirs = "5"
sha2 = "0.10"
zip = "2"
